Prevent wrapping inside icons + text in the footer

--- a/styles/1_footer.styl
+++ b/styles/1_footer.styl
@@ -41,6 +41,7 @@
       text-decoration none
       color rgba(255,255,255,.7)
       line-height 2.5rem
+      white-space nowrap
       &:not(:last-child)
         margin 0 1rem 0 0
       &:hover
